--- a/AvcolMusic1/Views/Classes/Index.cshtml
+++ b/AvcolMusic1/Views/Classes/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<AvcolMusic1.Models.Class>
+﻿@model PaginatedList<AvcolMusic1.Models.Class>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Classes";
 }
 
-<h1>Index</h1>
+<h1>Classes</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,47 +13,68 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Date)
+                Date
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StartTime)
+                Start Time
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EndTime)
+                End Time
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Student)
+                Student
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Teacher)
+                Teacher
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Student.StudentID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Teacher.TeacherID)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ClassID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ClassID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ClassID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EndTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Student.StudentID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Teacher.TeacherID)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ClassID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ClassID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ClassID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+@{
+    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex - 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @prevDisabled">
+    Previous
+</a>
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex + 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @nextDisabled">
+    Next
+</a>
