--- a/AvcolMusic1/Views/MusicTimetables/Index.cshtml
+++ b/AvcolMusic1/Views/MusicTimetables/Index.cshtml
@@ -1,10 +1,20 @@
-﻿@model IEnumerable<AvcolMusic1.Models.MusicTimetable>
+﻿@model PaginatedList<AvcolMusic1.Models.MusicTimetable>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Music Timetables";
 }
 
-<h1>Index</h1>
+<h1>Music Timetables</h1>
+
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Find by name: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
+            <input type="submit" value="Search" class="btn btn-default" /> |
+            <a asp-action="Index">Back to Full List</a>
+        </p>
+    </div>
+</form>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,42 +23,63 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Group)
+                Group ID
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Student)
+                Student
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Group.Instrument)
+                Instrument
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Group.Teacher)
+                Teacher
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Group.GroupID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Student.FirstName)
-                @Html.DisplayFor(modelItem => item.Student.Surname)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Group.Instrument)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Group.TeacherID)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MusicTimetableID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MusicTimetableID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MusicTimetableID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Group.GroupID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Student.FirstName)
+                    @Html.DisplayFor(modelItem => item.Student.Surname)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Group.Instrument)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Group.TeacherID)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.MusicTimetableID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.MusicTimetableID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.MusicTimetableID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+@{
+    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex - 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @prevDisabled">
+    Previous
+</a>
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex + 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @nextDisabled">
+    Next
+</a>
