Revert "added sorting and filtering to classes table"
This reverts commit 59ffb7437a4964dbf00749658de0f1d44fcaac0d.

--- a/AvcolMusic1/Views/Students/Index.cshtml
+++ b/AvcolMusic1/Views/Students/Index.cshtml
@@ -24,16 +24,16 @@
     <thead>
         <tr>
             <th>
-                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Surname</a>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter ="@ViewData["CurrentFilter"]">Surname</a>
             </th>
             <th>
-                <a asp-action="Index" asp-route-sortOrder="@ViewData["FirstNameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">First Name</a>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["FirstNameSortParm"]" asp-route-currentFilter ="@ViewData["CurrentFilter"]">First Name</a>
             </th>
             <th>
                 Year
             </th>
             <th>
-                <a asp-action="Index" asp-route-sortOrder="@ViewData["HomeRoomSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">HomeRoom</a>
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["HomeRoomSortParm"]" asp-route-currentFilter ="@ViewData["CurrentFilter"]">HomeRoom</a>
             </th>
             <th></th>
         </tr>
