--- a/AvcolMusic1/Views/Classes/Index.cshtml
+++ b/AvcolMusic1/Views/Classes/Index.cshtml
@@ -6,16 +6,6 @@
 
 <h1>Classes</h1>
 
-<form asp-action="Index" method="get">
-    <div class="form-actions no-color">
-        <p>
-            Find by teacher: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
-            <input type="submit" value="Search" class="btn btn-default" /> |
-            <a asp-action="Index">Back to Full List</a>
-        </p>
-    </div>
-</form>
-
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -23,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                <a asp-action="Index" asp-route-sortOrder="@ViewData["DateSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Date</a>
+                Date
             </th>
             <th>
                 Start Time
@@ -32,10 +22,10 @@
                 End Time
             </th>
             <th>
-                <a asp-action="Index" asp-route-sortOrder="@ViewData["StudentIDSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Student</a>
+                Student
             </th>
             <th>
-                <a asp-action="Index" asp-route-sortOrder="@ViewData["TeacherIDSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Teacher</a>
+                Teacher
             </th>
             <th></th>
         </tr>
